Fix spacing on mobile devices

--- a/css/amodeo.css
+++ b/css/amodeo.css
@@ -45,7 +45,6 @@ a:hover {
 #hero-nav > li > a,
 #hero-nav > li > a:hover {
     color: #fff;
-    font-size: 1.2em;
     font-weight: 300;
 }
 
@@ -96,4 +95,14 @@ section#work {
     -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
+}
+
+@media (max-width: 767px) {
+    body {
+        font-size: 1.6em;
+    }
+
+    section.container-fluid > .row {
+        margin-bottom: 1em;
+    }
 }
